src/style.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.score{
  padding-top: 0.01rem;
  flex-basis: 45%;
}
a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  margin: 0;
  padding: 0;
  margin-bottom: 1rem;
  font-size: 4em;
  line-height: 1.1;
  text-align: center;
  flex-basis: 80%;
  max-height: 100px;
}
.header{
  flex-basis: 90%;
}
.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  flex-grow: 1;
}

.main {
  display: flex;
  flex-basis: 100%;
  width: 100%;
  align-items: flex-start;
}
#lyrics0 {
  max-height: 40vh;
  overflow-y: auto;
  white-space: pre-line;
}
.content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  padding: 0;
  margin: 0;
  min-height: 99vh;
}
.center {
  margin-top: 1rem;
  flex-basis: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
  max-height: 100vh;
  flex-grow: 1;
}
.center2 {
  margin: 1rem;
  margin-bottom: 0;
  flex-basis: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: flex-start;
}

.center, .center2 {
  flex-grow: 0;
  flex-shrink: 1;
}
.lyrics {
  padding: 0;
  flex-basis: 60%;
  max-width: 40rem;
  display: block;
}

.hints {
  margin: 1px;
  padding: 0;
  flex-basis: 30%;
  max-width: 40rem;
  display: block;
}

.card {
  padding-top: 0em;
  flex-basis: 70%;
}

#guessCount {
  margin-top: 1em;
  font-weight: bold;
}

.message-box {
  padding: 10px;
  margin-top: 10px;
  background-color: #242424;
  border: 1px solid #ccc;
  display: none;
}

.message-box.success {
  background-color: white;
  color: #1a1a1a;
  border-color: #c3e6cb;
  display: block;
}

.message-box.error {
  background-color: #242424;
  border-color: #f5c6cb;
  display: block;
}

.suggestions-box {
  border: 1px solid #ccc;
  max-height: 150px;
  overflow-y: auto;
  position: absolute;
  background-color: white;
  color: #1a1a1a;
  width: 200px;
  border-color: #f5c6cb;
  display: none;
}

.suggestion-item {
  padding: 8px;
  cursor: pointer;
}

.suggestion-item:hover {
  background-color: #ddd;
}

.guesses {
  display: none;
}

.sideImage {
  max-width: 40rem;
  min-height: 100vh;
  object-fit: cover;
}

footer {
  flex-basis: 100%;
  margin-top: 0;
  max-height: 1vh;
}

@media (max-width: 1600px) {
  .main {
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: flex-start;
    overflow: hidden;
  }

  .sideImage {
    width: 20vw;
    min-width: 10vw;
    object-fit: cover;
  }

  .center {
    flex: 1;
    max-width: 80vw;
    overflow: hidden;
  }

  .center2, .lyrics, .hints, .card {
    flex-basis: 100%;
    max-width: 100%;
  }

  h1 {
    font-size: 2em;
  }

  #lyrics0 {
    max-height: 30vh;
  }

  .suggestions-box {
    width: 100%;
  }
}

